# exr_image

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  exr_image.h
.github/workflows/: ci.yml
docs/: abi.md  checks.md  feature_coverage.md  public_api.md  release.md
scripts/: build-fuzzers.sh  check-corpus-matrix.sh  check-exrs-reference.sh  check-msvc.cmd  check-openexr-reference.sh  check-release.sh  check-tinyexr-reference.sh  list-public-api.sh  make-source-release.sh
tests/: abi_probe.c  bounds.c  callback_abi.c  callback_stdcall_decl.c  compile_no_stdio.c  corpus_roundtrip.c  dll_build.c  exri_test_compat.h  fuzz_exr_image.c  leak.c  limits.c  loadf_probe.c  negative.c  safety.c  scrgb.c  smoke.c  spectral.c  write.c  write_fail.c
tests/bench/: CMakeLists.txt  bench.cpp
tests/exrs_reference/: Cargo.toml  build.rs  exri_impl.c
tests/exrs_reference/src/: main.rs
tests/openexr_reference/: CMakeLists.txt  openexr_reference.cpp
tests/tinyexr_reference/: CMakeLists.txt  tinyexr_reference.cpp
